--- a/portfolio.html
+++ b/portfolio.html
@@ -88,19 +88,17 @@
         </section>
     </main>
 
-     <!-- Підвал -->   
-     <footer>
+    <footer>
         <div id="contacts">
             <a href="/">WebStudio</a>
             <address>
-                м. Київ, пр-т Лесі Українки, 26
-              </address>
-              <ul> 
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>      
-            </ul>                                 
+                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"  target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a> 
+                <ul> 
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>      
+                </ul>                
+              </address>                               
         </div>
     </footer>
-    
 </body>
 </html>
