--- a/portfolio.html
+++ b/portfolio.html
@@ -10,93 +10,95 @@
 <body>
     <header>
         <nav>
-            <a href="/">WebStudio</a>       
+            <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>       
             <!-- Меню навігації -->   
-            <ul>        
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="#contacts">Контакти</a></li>   
+            <ul class="menu list">         
+                <li><a class="link " href="./index.html">Студія</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+                <li><a class="link " href="#contacts">Контакти</a></li>   
             </ul>
         </nav>    
             <!-- Контакти -->
-            <ul> 
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>      
+            <ul class="contact list" > 
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>      
             </ul>                                                       
     </header>
 
     <!-- Портфоліо -->
     <main>
-        <section>
-            <h1>Портфоліо</h1>
+        <section class="section">
+            <h1 class="section-title">Портфоліо</h1>
             <!-- Фільтр -->
-        <ul>
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+            <li><button class="button" type="button">Усі</button></li>
+            <li><button class="button" type="button">Веб-сайти</button></li>
+            <li><button class="button" type="button">Додатки</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
         </ul>
               <!-- Портфоріо -->
-        <ul>
+        <ul class="portfolio list">
             <li>
                 <img src="./images/portfolio1.jpg" alt="Технокряк" width="370">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="title" >Технокряк</h3>
+                <p class="title-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                <p class="title-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370">
-                <h3>Ресторан Seafood</h3>
-                <p>Додаток</p>
+                <h3 class="title">Ресторан Seafood</h3>
+                <p class="title-text">Додаток</p>
             </li>
             <li>
                 <img src="./images/portfolio4.jpg" alt="Проєкт Prime" width="370">
-                <h3>Проєкт Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="title">Проєкт Prime</h3>
+                <p class="title-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio5.jpg" alt="Проєкт Boxes" width="370">
-                <h3>Проєкт Boxes</h3>
-                <p>Додаток</p>
+                <h3 class="title">Проєкт Boxes</h3>
+                <p class="title-text">Додаток</p>
             </li>
             <li>
                 <img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 class="title">Inspiration has no Borders</h3>
+                <p class="title-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio7.jpg" alt="Видання Limited Edition" width="370">
-                <h3>Видання Limited Edition</h3>
-                <p>Дизайн</p>
+                <h3 class="title">Видання Limited Edition</h3>
+                <p class="title-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio8.jpg" alt="Проєкт LAB" width="370">
-                <h3>Проєкт LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="title">Проєкт LAB</h3>
+                <p class="title-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio9.jpg" alt="Growing Business" width="370">
-                <h3>Growing Business</h3>
-                <p>Додаток</p>
+                <h3 class="title">Growing Business</h3>
+                <p class="title-text">Додаток</p>
             </li>
         </ul>
         </section>
     </main>
 
-    <footer>
+     <!-- Підвал -->   
+     <footer class="footer">
         <div id="contacts">
-            <a href="/">WebStudio</a>
+            <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>  
             <address>
-                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"  target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a> 
-                <ul> 
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>      
-                </ul>                
+                <a class="addres-link"href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"  target="_blank" rel="noopener noreferrer" >м. Київ, пр-т Лесі Українки, 26</a> 
+                <!-- Контакти -->
+            <ul class="contact-footer list" > 
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>      
+            </ul>                 
               </address>                               
         </div>
     </footer>
