--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+     <header>
       <nav>
         <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
         <!-- Меню навігації -->
         <ul class="menu list">
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link current" href="./index.html">Студія</a></li>
+          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="#contacts">Контакти</a></li>
         </ul>
       </nav>
@@ -33,7 +33,7 @@
     <main>
       <h1>Наші роботи</h1>
       <section class="section">
-        <h1 class="section-title">Портфоліо</h1>
+        <h1>Портфоліо</h1>
         <!-- Фільтр -->
         <ul class="list">
           <li><button class="button" type="button">Усі</button></li>
