--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
         <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
         <!-- Меню навігації -->
         <ul class="menu list">
-          <li><a class="link current" href="./index.html">Студія</a></li>
-          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="./index.html">Студія</a></li>
+          <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="#contacts">Контакти</a></li>
         </ul>
       </nav>
